@@ -275,23 +275,23 @@ public class NumberSceneNode extends SceneNode implements NumberDragContext, Fra
                 return target.patternNode.getFullBounds().getMinX();
             }
         } ).minimum( Ord.doubleOrd );
-        final PhetPText title = new PhetPText( "Level " + ( levelIndex + 1 ), new PhetFont( 32, true ) );
-        title.setOffset( ( minScoreCellX - AbstractFractionsCanvas.INSET ) / 2 - title.getFullWidth() / 2, backButton.getFullBounds().getCenterY() - title.getFullHeight() / 2 );
-        addChild( title );
+        final PhetPText levelReadoutTitle = new PhetPText( "Level " + ( levelIndex + 1 ), new PhetFont( 32, true ) );
+        levelReadoutTitle.setOffset( ( minScoreCellX - AbstractFractionsCanvas.INSET ) / 2 - levelReadoutTitle.getFullWidth() / 2, backButton.getFullBounds().getCenterY() - levelReadoutTitle.getFullHeight() / 2 );
+        addChild( levelReadoutTitle );
 
         final TextButtonNode resetButton = new TextButtonNode( "Reset", AbstractFractionsCanvas.CONTROL_FONT, RefreshButtonNode.BUTTON_COLOR ) {{
-            setOffset( title.getMaxX() + 100, title.getCenterY() - getFullBounds().getHeight() / 2 );
             addActionListener( new ActionListener() {
                 public void actionPerformed( final ActionEvent e ) {
                     reset();
                 }
             } );
         }};
-        addChild( resetButton );
 
-        addChild( new RefreshButtonNode( _resampleLevel ) {{
-            setOffset( resetButton.getMaxX() + 20, title.getCenterY() - getFullBounds().getHeight() / 2 );
+        final RefreshButtonNode refreshButton = new RefreshButtonNode( _resampleLevel );
+        addChild( new HBox( resetButton, refreshButton ) {{
+            setOffset( levelReadoutTitle.getCenterX() - getFullBounds().getWidth() / 2, levelReadoutTitle.getMaxY() + INSET );
         }} );
+
     }
 
     private void reset() {
